# pcb-dfm

./: .gitignore  CONTRIBUTING.md  README.md  action.yml  categories.json  debug_coordinates.py  pyproject.toml  simple_test.py  test_acid_trap.py  test_fixes.py  test_run_dfm_bundle.py
.github/workflows/: ci.yml  dfm.yml  release.yml
benchmarks/: README.md
checks/: acid_trap_angle.json  aperture_definition_errors.json  backdrill_stub_length.json  component_to_component_spacing.json  copper_density_balance.json  copper_sliver_width.json  copper_thermal_area.json  diff_pair_skew.json  fillet_radius_milling.json  index.json  layer_registration_margin.json  min_drill_size.json  min_trace_spacing.json  missing_tooling_holes.json  silkscreen_min_width.json  solder_mask_expansion.json  solder_mask_web.json  solder_paste_area_coverage.json  tab_routing_mousebites.json  thermal_relief_spoke_width.json  via_in_pad_thermal_balance.json  via_tenting.json  wave_solder_shadowing.json
corpus/: README.md  SOURCES.md
corpus/manifests/: diptrace_fd1.json  eagle_gyw.json  mini_board.json  pcbtools_example.json  pcbtools_full.json
pcb-dfm/: results.py
pcb_dfm/: __init__.py  __main__.py  io.py  remediation.py  report.py  results.py
pcb_dfm/check_data/checks/: aperture_definition_errors.json  copper_density_balance.json  copper_thermal_area.json  copper_to_edge_distance.json  crosstalk_estimate.json  dielectric_thickness_uniformity.json  diff_pair_spacing.json  drill_aspect_ratio.json  drill_to_drill_spacing.json  drill_wander_budget.json  etch_compensation_margin.json  highspeed_stub_length.json  impedance_control.json  index.json  mask_to_trace_clearance.json  min_annular_ring.json  min_slot_width.json  min_trace_width.json  missing_tooling_holes.json  plane_fragmentation.json  plating_uniformity.json  polarity_marking_consistency.json  return_path_interruptions.json  silkscreen_clearance.json  silkscreen_on_copper.json  silkscreen_over_mask_defined_pads.json  tombstoning_risk.json  unsupported_hole_types.json  via_in_pad_thermal_balance.json  via_to_copper_clearance.json
pcb_dfm/check_data/rulesets/: advanced_hdi.json  conservative_2layer.json  default.json  jlcpcb_2layer.json  jlcpcb_4layer.json  oshpark.json  pcbway.json
pcb_dfm/checks/: README.md  __init__.py  definitions.py  impl_acid_trap_angle.py  impl_aperture_definition_errors.py  impl_backdrill_stub_length.py  impl_component_to_component_spacing.py  impl_copper_density_balance.py  impl_copper_sliver_width.py  impl_copper_thermal_area.py  impl_copper_to_edge_distance.py  impl_crosstalk_estimate.py  impl_dielectric_thickness_uniformity.py  impl_diff_pair_skew.py  impl_diff_pair_spacing.py  impl_drill_aspect_ratio.py  impl_drill_to_drill_spacing.py  impl_drill_wander_budget.py  impl_etch_compensation_margin.py  impl_fillet_radius_milling.py  impl_highspeed_stub_length.py  impl_impedance_control.py  impl_layer_registration_margin.py  impl_mask_to_trace_clearance.py  impl_min_annular_ring.py  impl_min_drill_size.py  impl_min_slot_width.py  impl_min_trace_spacing.py  impl_min_trace_width.py  impl_missing_tooling_holes.py  impl_plane_fragmentation.py  impl_plating_uniformity.py  impl_polarity_marking_consistency.py  impl_return_path_interruptions.py  impl_silkscreen_clearance.py  impl_silkscreen_min_width.py  impl_silkscreen_on_copper.py  impl_silkscreen_over_mask_defined_pads.py  impl_solder_mask_expansion.py  impl_solder_mask_web.py  (+9 more)
pcb_dfm/cli/: main.py
pcb_dfm/engine/: __init__.py  check_defs.py  check_runner.py  context.py  geometry_cache.py  run.py
pcb_dfm/geometry/: __init__.py  excellon_fallback.py  gerber_backend.py  gerber_compat.py  gerber_parser.py  layer_model.py  net_map.py  net_topology.py  pad_map.py  polygon_index.py  primitives.py  queries.py
pcb_dfm/ingest/: __init__.py  aperture_validation.py  design_data.py  design_model.py  gerber_zip.py  kicad_export.py  kicad_native.py
pcb_dfm/ingest/adapters/: __init__.py  bom.py  ipc2581.py  ipc356.py  kicad.py  odbpp.py  sidecar.py
pcb_dfm/io/: __init__.py  cam_bundle.py
schemas/: dfm-result.schema.json  pcb-dfm.ruleset-profile.schema.json  pcb-dfm.ruleset.schema.json
scripts/: build_index.py  generate_report.py  run_single_check.py  test_custom_check_equivalence.py  test_custom_check_from_file.py  test_geometry_stub.py  test_ingest.py  test_report.py
testdata/: example_result.json  sample_design.xml
testdata/odbpp_sample/matrix/: matrix
testdata/odbpp_sample/steps/pcb/: stephdr
testdata/odbpp_sample/steps/pcb/eda/: data
testdata/odbpp_sample/steps/pcb/layers/comp_+_bot/: components
testdata/odbpp_sample/steps/pcb/layers/comp_+_top/: components
tests/: boards.py  test_accurate_geometry.py  test_arc_tessellation.py  test_assembly_checks.py  test_bom.py  test_bundle_unit.py  test_check_correctness.py  test_component_spacing_identity.py  test_corpus.py  test_cross_layer_nets.py  test_crosstalk.py  test_design_data.py  test_diff_pair_spacing.py  test_dormant_checks.py  test_end_to_end.py  test_excellon_fallback.py  test_fab_rulesets.py  test_false_positive_floor.py  test_footprint_aware.py  test_gate.py  test_gerber_backend.py  test_golden.py  test_html_report.py  test_kicad_adapter.py  test_kicad_export.py  test_kicad_native.py  test_net_map.py  test_netlist.py  test_new_checks.py  test_odbpp.py  test_plating_uniformity.py  test_polygon_index.py  test_pour_artifacts.py  test_properties.py  test_remediation.py  test_return_path.py  test_rulesets.py  test_stackup.py  test_stub_length.py  test_tombstoning.py  (+1 more)
tests/baselines/: clean_two_layer.json  four_layer_planes.json  thin_trace_board.json
tests/baselines/corpus/: diptrace_fd1.json  eagle_gyw.json  mini_board.json  pcbtools_example.json  pcbtools_full.json
