[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcb-dfm"
version = "0.2.0"
description = "Open DFM rule and report schemas and tooling for PCB manufacturing."
readme = "README.md"
requires-python = ">=3.9"

license = { text = "MIT" }

authors = [
  { name = "Vincent", email = "vincent@asappcb.com" }
]

dependencies = [
  "pydantic>=2.8,<3.0",
  "pcb-tools>=0.1.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.8"
]

[project.urls]
Homepage = "https://github.com/mfgs-us/pcb-dfm"

# -------------------------------------------------------
# Packaging configuration
# -------------------------------------------------------

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# Include pcb_dfm and ALL its subpackages (pcb_dfm.engine, pcb_dfm.checks, etc)
include = ["pcb_dfm", "pcb_dfm.*"]
exclude = ["tests*", "scripts*", "schemas*", "testdata*"]


[tool.setuptools.package-data]
# These JSON rule files get installed WITH the package
pcb_dfm = [
  "check_data/checks/*.json",
  "check_data/categories.json"
]
